# hacker-lens

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 79b61e06e32b_create_authors_and_items_tables.py  e26083a8b008_add_sentiment_score_to_items.py  ef4d76819f92_add_topics_and_item_topics_tables.py  f37bd0aa51e8_add_sentiment_score_to_items.py
src/hackerlens/core/: analytics.py  config.py  logging.py  schemas.py
src/hackerlens/db/: models.py  redis_client.py  session.py
src/hackerlens/nlp/: run_topic_extraction.py  sentiment.py  topics.py
src/hackerlens/scraper/: hn_client.py  pipeline.py  rate_limiter.py
src/reddit_lens/core/: config.py  schemas.py
src/reddit_lens/db/: base.py  models.py  session.py
src/reddit_lens/scraper/: hn_client.py
tests/unit/: conftest.py  test_hn_client.py  test_rate_limiter.py  test_sentiment.py
