[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hackerlens"
version = "0.1.0"
description = "Reddit Intelligence Platform: scraping, NLP analytics and dashboard for Reddit data"
authors = [
    {name = "MyratgeldiyevM1112"}
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "isort>=5.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F = pyflakes errors, I = import sorting, UP = modernize syntax, B = bug-prone patterns
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"